Barcode and many apis build
