# routes/cctv.routes.js
@@ -1,0 +1,7 @@
+const router = require('express').Router();
+const cctvStreamController = require('../controllers/cctv.controller');
+
+router.get("/cctvStream",cctvStreamController.getData)
+// router.post("/cctvStream",cctvStreamController.postData);
+    
+module.exports = router;
